# mod-events

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: dispatch_benchmark.rs
docs/: api-reference.md  best-practices.md  examples.md  migration.md  performance.md  quick-start.md
examples/: async_usage.rs  basic_usage.rs
src/: async_support.rs  core.rs  dispatcher.rs  lib.rs  listener.rs  metrics.rs  middleware.rs  priority.rs  result.rs
tests/: benchmarks.rs  integration_tests.rs
